styling: #4086 fixing bug where long commit messages did not wrap in file view

--- a/rhodecode/public/css/summary.less
+++ b/rhodecode/public/css/summary.less
@@ -172,6 +172,10 @@
             overflow-x: auto;
         }
     }
+    .commit.truncate-wrap {
+        overflow:hidden;
+        text-overflow: ellipsis;
+    }
 }
 
 // expand commit message
